--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <section>
         <h1>It's My Birthday!</h1>
         <p>On the 3th June</p>
-        <img src="R" alt="Birthday Cake" width="300">
+        <img src="R.jpeg" alt="Birthday Cake" width="300">
         <p>what to bring:</p>
         <ul>
             <li>ring </li>
